# talleo-tip-bot

./: Pipfile  README.md  config.yml.example  gen_requirements.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tox.yml
talleo_tip_bot/: bot.py  config.py  models.py  rpc_client.py  store.py  wallet.py
